update forgot and reset password

--- a/assets/lang/lo.json
+++ b/assets/lang/lo.json
@@ -4,6 +4,7 @@
   "not_have_account": "ຍັງບໍ່ມີບັນຊີເທື່ອ",
   "is_have_account": "ມີບັນຊີຢູ່ແລ້ວ",
   "register": "ລົງທະບຽນ",
+  "forgot_password_text": "ລືມລະຫັດຜ່ານ",
   "phone_can_not_empty": "ເບີໂທລະສັບບໍ່ສາມາດວ່າງເປົ່າໄດ້",
   "phone_should_be_must_equal_8": "ເບີໂທລະສັບຈະຕ້ອງເທົ່າ 8 ຕົວເລກ",
   "password_can_not_be_empty": "ລະຫັດຜ່ານບໍ່ສາມາດວ່າງເປົ່າໄດ້",
@@ -16,6 +17,18 @@
   "still_haven_received_the_code": "ຍັງບໍ່ໄດ້ຮັບລະຫັດຢືນຢັນ",
   "send_again": "ຂໍລະຫັດອີກຄັ້ງ",
   "otp_can_send_again_at": "ລະຫັດ OTP ສາມາດຂໍໄດ້ອີກໃນ",
+  "forgot_password_title": "ລືມລະຫັດຜ່ານ",
+  "change_password_title":"ປ່ຽນລະຫັດຜ່ານ",
+  "new_password": "ລະຫັດຜ່ານໃໝ່",
+  "input_new_password": "ປ້ອນລະຫັດຜ່ານໃໝ່",
+  "confirm_password": "ຢືນຢັນລະຫັດຜ່ານ",
+  "password_not_match": "ລະຫັດຜ່ານບໍ່ຕົງກັນ",
+  "input_otp_code": "ປ້ອນລະຫັດ OTP",
+  "otp_can_not_empty": "ລະຫັດ OTP ບໍ່ສາມາດວ່າງເປົ່າໄດ້",
+  "otp_should_be_6": "ລະຫັດ OTP ຄວນເທົ່າກັບ 6 ຕົວເລກ",
+  "change_password_button": "ປ່ຽນລະຫັດຜ່ານ",
+  "change_password_success_msg": "ປ່ຽນລະຫັດຜ່ານສຳເລັດ ກະລຸນາເຂົ້າສູ່ລະບົບ",
+  "this_phone_not_have_in_system": "ບໍ່ມີໃນລະບົບ ກະລຸນາລົງທະບຽນກ່ອນ",
   "menus_bottom": "=============================> menus bottom ========================",
   "home": "ໜ້າຫຼັກ",
   "lottery_result": "ຜົນຫວຍ",
@@ -26,5 +39,8 @@
   "phone_number": "ເບີໂທລະສັບ",
   "password_text": "ລະຫັດຜ່ານ",
   "or": "ຫຼື",
-  "second": "ວິນາທີ"
+  "second": "ວິນາທີ",
+  "buy_lottery": "ຊື້ຫວຍ",
+  "unknown_error": "ເກີດຂໍ້ຜິດພາດທີ່ບໍ່ຮູ້ຈັກ",
+  "next": "ຖັດໄປ"
 }
