--- a/assets/lang/lo.json
+++ b/assets/lang/lo.json
@@ -42,5 +42,6 @@
   "second": "ວິນາທີ",
   "buy_lottery": "ຊື້ຫວຍ",
   "unknown_error": "ເກີດຂໍ້ຜິດພາດທີ່ບໍ່ຮູ້ຈັກ",
-  "next": "ຖັດໄປ"
+  "next": "ຖັດໄປ",
+  "can_not_open_link": "ລິ້ງນີ້ບໍ່ສາມາດເປີດໄດ້"
 }
