update information feature

--- a/assets/lang/lo.json
+++ b/assets/lang/lo.json
@@ -43,5 +43,10 @@
   "buy_lottery": "ຊື້ຫວຍ",
   "unknown_error": "ເກີດຂໍ້ຜິດພາດທີ່ບໍ່ຮູ້ຈັກ",
   "next": "ຖັດໄປ",
-  "can_not_open_link": "ລິ້ງນີ້ບໍ່ສາມາດເປີດໄດ້"
+  "can_not_open_link": "ລິ້ງນີ້ບໍ່ສາມາດເປີດໄດ້",
+  "no_more_items": "ຂໍ້ມູນໝົດແລ້ວ",
+  "not_found_data": "ບໍ່ພົບຂໍ້ມູນ",
+  "news": "========================== ຂ່າວສານ ===============",
+  "news_page_title": "ຂ່າວສານ",
+  "news_detail_page_title": "ລາຍລະອຽດ"
 }
