update home page

--- a/assets/lang/lo.json
+++ b/assets/lang/lo.json
@@ -39,14 +39,29 @@
   "phone_number": "ເບີໂທລະສັບ",
   "password_text": "ລະຫັດຜ່ານ",
   "or": "ຫຼື",
-  "second": "ວິນາທີ",
   "buy_lottery": "ຊື້ຫວຍ",
   "unknown_error": "ເກີດຂໍ້ຜິດພາດທີ່ບໍ່ຮູ້ຈັກ",
   "next": "ຖັດໄປ",
   "can_not_open_link": "ລິ້ງນີ້ບໍ່ສາມາດເປີດໄດ້",
   "no_more_items": "ຂໍ້ມູນໝົດແລ້ວ",
   "not_found_data": "ບໍ່ພົບຂໍ້ມູນ",
+  "points": "ຄະແນນ",
   "news": "========================== ຂ່າວສານ ===============",
   "news_page_title": "ຂ່າວສານ",
-  "news_detail_page_title": "ລາຍລະອຽດ"
+  "news_detail_page_title": "ລາຍລະອຽດ",
+  "referral_section": "================> ແນະນຳໝູ່ ==============",
+  "your_referral_code": "ລະຫັດແນະນຳຂອງທ່ານ",
+  "suggest_your_friends_for_get_point": "ແນະນຳໝູ່ຂອງທ່ານເພື່ອຮັບເງິນ",
+  "of_sales": "ຂອງຍອດຂາຍ",
+  "home_page": "==============> ໜ້າຫຼັກ ============",
+  "lottery_services": "ບໍລິການຫວຍ",
+  "lottery_betting": "ແທງຫວຍ",
+  "lottery_statistic": "ສະຖິຕິຫວຍ",
+  "dream_augur": "ຕຳລາຝັນ",
+  "chance_date": "ງວດວັນທີ",
+  "close_lottery_chance": "ປິດການຂາຍໃນອີກ",
+  "day": "ວັນ",
+  "hour": "ຊົ່ວໂມງ",
+  "minute": "ນາທີ",
+  "second": "ວິນາທີ"
 }
