add search digit function

--- a/assets/lang/lo.json
+++ b/assets/lang/lo.json
@@ -90,5 +90,6 @@
   "confirm_to_buy": "ຢືນຢັນການຊື້ຫວຍ",
   "treatise_title": "ຕຳລາ",
   "add_front_digits": "ເພີ່ມຫຼັກ",
-  "full_digits": "ເຕັມນາມ"
+  "full_digits": "ເຕັມນາມ",
+  "add": "ເພີ່ມ"
 }
