add last lottery result

--- a/assets/lang/lo.json
+++ b/assets/lang/lo.json
@@ -92,5 +92,6 @@
   "add_front_digits": "ເພີ່ມຫຼັກ",
   "full_digits": "ເຕັມນາມ",
   "add": "ເພີ່ມ",
-  "draw_lotto_is_closed": "ຍັງບໍ່ທັນເປີດງວດໃໝ່"
+  "draw_lotto_is_closed": "ຍັງບໍ່ທັນເປີດງວດໃໝ່",
+  "last_lottery_result": "ຜົນຫວຍລ່າສຸດ"
 }
