fix ui and refactor code

--- a/assets/lang/lo.json
+++ b/assets/lang/lo.json
@@ -6,7 +6,9 @@
   "register": "ລົງທະບຽນ",
   "forgot_password_text": "ລືມລະຫັດຜ່ານ",
   "phone_can_not_empty": "ເບີໂທລະສັບບໍ່ສາມາດວ່າງເປົ່າໄດ້",
-  "phone_should_be_must_equal_8": "ເບີໂທລະສັບຈະຕ້ອງເທົ່າ 8 ຕົວເລກ",
+  "phone_should_be_must_equal_10": "ເບີໂທລະສັບຈະຕ້ອງຂື້ນຕົ້ນດ້ວຍ 20 ຕໍ່ດ້ວຍເບີໂທລະສັບ",
+  "prepaid_should_be_must_30_7numbers": "ເບີໂທລະສັບຕັ້ງໂຕະຈະຕ້ອງມີ 30 ຕໍ່ດ້ວຍເບີໂທລະສັບ 7 ຕົວເລກ",
+  "mobile_should_be_must_20_8numbers": "ເບີໂທລະສັບມືຖືຈະຕ້ອງມີ 20 ຕໍ່ດ້ວຍເບີໂທລະສັບ 8 ຕົວເລກ",
   "password_can_not_be_empty": "ລະຫັດຜ່ານບໍ່ສາມາດວ່າງເປົ່າໄດ້",
   "has_in_system_plz_login": "ມີຢູ່ໃນລະບົບແລ້ວ ກະລຸນາເຂົ້າສູ່ລະບົບ",
   "password_must_be_pass_regex": "ລະຫັດຜ່ານຈະຕ້ອງມີຕົວພິມໃຫຍ່ A-Z ແລະ ຕົວພິມນ້ອຍ a-z, ຕົວເລກ 0-9, ຕົວອັກສອນພິເສດ [&,@] ແລະ ຕ້ອງມີຈຳນວນ 6 ຕົວຂື້ນໄປ",
