fix ui and refactor code

--- a/assets/lang/lo.json
+++ b/assets/lang/lo.json
@@ -18,7 +18,7 @@
   "your_phone_send_to": "ລະຫັດ OTP ຂອງທ່ານຖືກສົ່ງໄປຫາເບີ",
   "still_haven_received_the_code": "ຍັງບໍ່ໄດ້ຮັບລະຫັດຢືນຢັນ",
   "send_again": "ຂໍລະຫັດອີກຄັ້ງ",
-  "otp_can_send_again_at": "ລະຫັດ OTP ສາມາດຂໍໄດ້ອີກໃນ",
+  "otp_can_send_again_at": "ລະຫັດ OTP ສາມາດຂໍໄດ້ອີກຄັ້ງໃນ",
   "forgot_password_title": "ລືມລະຫັດຜ່ານ",
   "change_password_title":"ປ່ຽນລະຫັດຜ່ານ",
   "new_password": "ລະຫັດຜ່ານໃໝ່",
