--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -1,3 +1,30 @@
 {
-  "text_for_authentication": "=========================="
+  "text_for_authentication": "==========================",
+  "input_price": "Price",
+  "choose_price": "Choose Price",
+  "lottery_panel": "Panel",
+  "all_total": "Total",
+  "minimum_bet_per_time": "Minimum bet / time",
+  "maximum_bet_per_time":"Maximum bet / time",
+  "maximum_bet_per_number": "Maximum bet / number",
+  "betting_conditions": "Conditions",
+  "add_number": "Add Number",
+  "choose_number": "Choose Number",
+  "options": "Options",
+  "list": "List",
+  "remove_all": "Remove All",
+  "two_digit": "2-digit",
+  "three_digit": "3-digit",
+  "four_digit": "4-digit",
+  "five_digit": "5-digit",
+  "six_digit": "6-digit",
+  "payment": "Payment",
+  "ministry_of_finance": "Ministry of Finance",
+  "lao_lottery": "Lao Lottery",
+  "pay_with": "Pay With",
+  "done": "Done",
+  "list_completed": "Completed",
+  "buy_at": "Buy At",
+  "amount": "Amount",
+  "lucky_number": "Lucky Number"
 }
