--- a/assets/lang/lo.json
+++ b/assets/lang/lo.json
@@ -106,5 +106,33 @@
   "random_modern_lottery_invalid": "ຈຳນວນເລກທີ່ຕ້ອງການສຸ່ມຕ້ອງບໍ່ເກີນ",
   "numbers": "ເລກ",
   "the_number": "ສຳລັບເລກ",
-  "length": "ຫຼັກ"
+  "length": "ຫຼັກ",
+  "input_price": "ປ້ອນລາຄາ",
+  "choose_price": "ເລືອກຈຳນວນເງິນ",
+  "lottery_panel": "ແຜງຫວຍ",
+  "all_total": "ລວມທັງໝົດ",
+  "minimum_bet_per_time": "ແທງຂັ້ນຕໍ່າຕໍ່ຄັ້ງ",
+  "maximum_bet_per_time":"ແທງສູງສຸດຕໍ່ຄັ້ງ",
+  "maximum_bet_per_number": "ແທງສູງສຸດຕໍ່ເລກ",
+  "betting_conditions": "ເງື່ອນໄຂການແທງ",
+  "add_number": "ເພີ່ມເລກ",
+  "choose_number": "ເລືອກເລກ",
+  "options": "ຕົວເລືອກ",
+  "list": "ລາຍການ",
+  "remove_all": "ລົບທັງໝົດ",
+  "two_digit": "ເລກ 2 ໂຕ",
+  "three_digit": "ເລກ 3 ໂຕ",
+  "four_digit": "ເລກ 4 ໂຕ",
+  "five_digit": "ເລກ 5 ໂຕ",
+  "six_digit": "ເລກ 6 ໂຕ",
+  "payment": "ຊຳລະເງິນ",
+  "ministry_of_finance": "ກະຊວງການເງິນ",
+  "lao_lottery": "ຫວຍພັດທະນາ",
+  "pay_with": "ຊຳລະດ້ວຍ",
+  "done": "ສຳເລັດ",
+  "list_completed": "ລາຍການສຳເລັດ",
+  "buy_at": "ເວລາຊື້",
+  "amount": "ຈຳນວນ",
+  "lucky_number": "ເລກສ່ຽງ"
+
 }
